# ShadowCircuit

./: 2025-10-13-20-00-00-consensus  Cargo.toml  Dockerfile  README.md  arjun4522-shadowcircuit-8a5edab282632443.txt  capture.pcapng  config.yaml  requirements.txt
src/: lib.rs  main.rs  metrics.rs  security.rs
src/circuit/: mod.rs
src/crypto/: mod.rs
src/directory/: mod.rs
src/network/: cells.rs  mod.rs
src/proxy/: http.rs  mod.rs  socks5.rs
tests/integration/: full_circuit.rs  handshake_test.rs  relay_reachability_test.rs
tests/unit/: crypto_tests.rs  handshake_unit_tests.rs
