[package]
name = "tor-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
ring = "0.17"
x25519-dalek = "2.0"
aes-gcm = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
zeroize = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
base64 = "0.21"
hex = "0.4"
humantime = "2.1"


[dev-dependencies]
mockall = "0.11"
proptest = "1.0"
criterion = "0.5"
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration/full_circuit.rs"
harness = true

[package.metadata.fuzz]
targets = ["cell_parsing", "crypto_operations"]